# 3TC-AGP-TP

./: .gitignore  CMakeLists.txt  LICENCE.md  index.html  params.json
TD5/: main.c  tree.c  tree.h
TP1/src/: unmultiplexer.c
TP2/: Makefile  main.c  main.h  sudoku.c  utilSudoku.c
TP2/resources/: hard.txt  sudoku1.txt
TP2/src/: main.c  sudoku.c
TP2/src/headers/: sudoku.h  utilSudoku.h
TP3/: Makefile  hanoi.c  hanoi.h  main.c  pile.c  pile.h  pile_type.h
